# serial_tui

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  README.md  dist-workspace.toml  learn.md  todo.md  vports.sh
config/: config.toml  ports.toml
src/: app.rs  app_state.rs  error.rs  logger.rs  main.rs  notify.rs  serialtui.rs
src/config/: 2  app_port_config.rs  config.rs  config_util.rs  error.rs  mod.rs  port.rs  port_config.rs  ports.toml
src/config/test/: invalid_baud.toml  invalid_color.toml  invalid_databits.toml  minimal_config.toml  valid_config.toml
src/serial/: config.rs  connection.rs  error.rs  handle.rs  hub.rs  mod.rs  port.rs  port_connection.rs  port_handle.rs  port_info.rs  serial.rs  serial_manager.rs
src/types/: color.rs  mod.rs  port.rs  port_event.rs  port_info.rs  port_map.rs
src/ui/: app.rs  mod.rs  render.rs  ui.rs
src/ui/popup/: help.rs  mod.rs  notification.rs  port_list.rs  send_group.rs
src/ui/widgets/: config_bar.rs  display.rs  input_bar.rs  mod.rs
