[package]
name = "serial_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
crossterm = "0.29"
rand = "0.9"
ratatui = "0.30"
regex = "1"
serde = { version = "1", features = ["derive"] }
serialport = { version = "4.8.1", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["sync"] }
tokio-serial = "5.4.5"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
