[package]
name = "serial_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arboard = "3"
bytes = "1"
chrono = "0.4"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serialport = { version = "4.8.1", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-serial = "5.4.5"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
