[package]
name = "serial_tui"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/Mnmbrane/serial_tui"

[dependencies]
anyhow = "1"
arboard = "3"
bytes = "1"
chrono = "0.4"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serialport = { version = "4.8.1", features = ["serde"] }
thiserror = "2.0.17"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
